--- a/src/unsw/dungeon/MenuScreen.fxml
+++ b/src/unsw/dungeon/MenuScreen.fxml
@@ -2,13 +2,25 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <VBox fx:id="menuBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPress" prefHeight="400.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="resume" alignment="CENTER" contentDisplay="CENTER" text="Resume Game" textAlignment="CENTER" />
-      <Label fx:id="controls" text="Change Controls" />
-      <Label fx:id="lobby" text="Return to Lobby" />
-      <Label fx:id="quit" text="Quit Game" />
+      <Label fx:id="resume" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#clickResume" onMouseEntered="#hoverResume" onMouseExited="#unHoverResume" text="Resume Game" textAlignment="CENTER">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
+      <Label fx:id="controls" onMouseClicked="#clickChange" onMouseEntered="#hoverChange" onMouseExited="#unHoverChange" text="Change Controls">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
+      <Label fx:id="lobby" onMouseClicked="#clickLobby" onMouseEntered="#hoverLobby" onMouseExited="#unHoverLobby" text="Return to Lobby">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
+      <Label fx:id="quit" onMouseClicked="#clickQuit" onMouseEntered="#hoverQuit" onMouseExited="#unHoverQuit" text="Quit Game">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
    </children>
 </VBox>
