--- a/src/unsw/dungeon/ControllerScreen.fxml
+++ b/src/unsw/dungeon/ControllerScreen.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPressMovement" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.4" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -15,33 +17,32 @@
             <GridPane fx:id="movementGrid" prefHeight="406.0" prefWidth="324.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="moveUpLabel" onMouseEntered="#hoverUp" onMouseExited="#unHoverUp" text="Move Up" GridPane.columnIndex="1">
+                  <Label fx:id="moveUpLabel" onMouseEntered="#hoverUp" onMouseExited="#unHoverUp" text="Move Up">
                      <GridPane.margin>
-                        <Insets left="10.0" />
+                        <Insets left="100.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="moveDownLabel" layoutX="118.0" layoutY="70.0" onMouseEntered="#hoverDown" onMouseExited="#unHoverDown" text="Move Down: DOWN" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Label fx:id="moveDownLabel" layoutX="118.0" layoutY="70.0" onMouseEntered="#hoverDown" onMouseExited="#unHoverDown" text="Move Down: DOWN" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="-10.0" />
+                        <Insets left="100.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="moveLeftLabel" layoutX="10.0" layoutY="70.0" onMouseEntered="#hoverLeft" onMouseExited="#unHoverLeft" text="Move Left: LEFT" GridPane.rowIndex="1">
+                  <Label fx:id="moveLeftLabel" layoutX="10.0" layoutY="70.0" onMouseEntered="#hoverLeft" onMouseExited="#unHoverLeft" text="Move Left: LEFT" GridPane.rowIndex="3">
                      <GridPane.margin>
-                        <Insets left="10.0" />
+                        <Insets left="100.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="moveRightLabel" layoutX="10.0" layoutY="70.0" onMouseEntered="#hoverRight" onMouseExited="#unHoverRight" text="Move Right: RIGHT" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Label fx:id="moveRightLabel" layoutX="10.0" layoutY="70.0" onMouseEntered="#hoverRight" onMouseExited="#unHoverRight" text="Move Right: RIGHT" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="-10.0" />
+                        <Insets left="100.0" />
                      </GridPane.margin>
                   </Label>
                </children>
@@ -50,7 +51,7 @@
       </AnchorPane>
       <AnchorPane fx:id="rotationPane" layoutX="377.0" layoutY="194.0" prefHeight="400.0" prefWidth="224.0">
          <children>
-            <GridPane fx:id="rotationGrid" prefHeight="406.0" prefWidth="324.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane fx:id="optionsGrid" prefHeight="406.0" prefWidth="324.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
@@ -70,10 +71,27 @@
                         <Insets left="20.0" top="7.0" />
                      </GridPane.margin>
                   </Label>
+                  <Label fx:id="pauseLabel" layoutX="30.0" layoutY="206.0" onMouseEntered="#hoverPause" onMouseExited="#unhoverPause" text="Pause: ESCAPE">
+                     <GridPane.margin>
+                        <Insets left="20.0" top="7.0" />
+                     </GridPane.margin>
+                  </Label>
                </children>
             </GridPane>
          </children>
       </AnchorPane>
       <Label layoutX="25.0" layoutY="93.0" text="Hover over an option to select it, then enter your desired keybinding and click save!" />
+      <Line endX="85.0" endY="220.0" startX="85.0" startY="585.0" />
+      <Label layoutX="85.0" layoutY="178.0" text="Movement">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <Line endX="85.0" endY="220.0" layoutX="292.0" startX="85.0" startY="585.0" />
+      <Label layoutX="391.0" layoutY="178.0" text="Other Controls">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
