--- a/src/unsw/dungeon/MenuScreen.fxml
+++ b/src/unsw/dungeon/MenuScreen.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="menuBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPress" prefHeight="400.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="menuBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleKeyPress" prefHeight="400.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.4" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="resume" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#clickResume" onMouseEntered="#hoverResume" onMouseExited="#unHoverResume" text="Resume Game" textAlignment="CENTER">
          <font>
@@ -20,6 +20,11 @@
             <Font size="17.0" />
          </font></Label>
       <Label fx:id="texturePack" onMouseClicked="#clickTexture" onMouseEntered="#hoverTexture" onMouseExited="#unHoverTexture" text="Texture Packs">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label fx:id="loadLevel" layoutX="239.0" layoutY="174.0" onMouseClicked="#clickLevelLoad" onMouseEntered="#hoverLevelLoad" onMouseExited="#unhoverLevelLoad" text="Load Level from File">
          <font>
             <Font size="17.0" />
          </font>
